--- a/cluster/public/category-list/category-list.template.html
+++ b/cluster/public/category-list/category-list.template.html
@@ -1,17 +1,26 @@
 <button ng-click="$ctrl.createCategory('New Category')" class="btn btn-default">Create Cateogry</button>
 <br>
-<table class="categories table">
- <tr>
-  <td><b>Name:</b></td>
- </tr>
- <tr ng-repeat="category in $ctrl.categories">
-  <td>
+<ul class="categories table">
+ <li>
+  <b>Name:</b>
+ </li>
+ <li ng-repeat="category in $ctrl.categories">
    <span ng-hide="editing" ng-click="editing = true">{{category.category_name}}</span>
    <form ng-show="editing" ng-submit="editing = false; $ctrl.updateCategory(category)">
     <input type="text" ng-model="category.category_name" placeholder="Name" ng-required/>
     <br/>
    </form>
    <button ng-click="$ctrl.deleteCategory(category.category_name)" class="btn btn-default">Delete</button>
-  </td>
- </tr>
-</table>
+   <ul>
+    <li ng-repeat="regex in category.regex">
+     <span ng-hide="editing_2" ng-click="editing_2 = true">{{regex.regex}}</span>
+     <form ng-show="editing_2" ng-submit="editing_2 = false; $ctrl.updateRegex(category, regex)">
+      <input type="text" ng-model="regex.regex" placeholder="Name" ng-required/>
+      <br/>
+     </form>
+     <button ng-click="$ctrl.deleteRegex(category, regex)" class="btn btn-default">Delete</button>
+    </li>
+    <li><input type="text" ng-model="new_regex" placeholder="Name"/><button ng-click="$ctrl.createRegex(category,new_regex)" class="btn btn-default">Create Cateogry</button></li>
+   </ul>
+ </li>
+</ul>
