--- a/cluster/public/index.html
+++ b/cluster/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en" ng-app="clusterApp">
 <head>
     <script src="dev/angular.js"></script>
+    <script src="static/account-service/account-service.module.js"></script>
     <script src="static/charge-list/charge-list.module.js"></script>
     <script src="static/charge-list/charge-list.component.js"></script>
     <script src="static/charge-list/charge-search.component.js"></script>
