--- a/cluster/public/index.html
+++ b/cluster/public/index.html
@@ -3,6 +3,8 @@
 <head>
     <script src="dev/angular.js"></script>
     <script src="static/account-service/account-service.module.js"></script>
+    <script src="static/navbar/navbar.module.js"></script>
+    <script src="static/navbar/navbar.component.js"></script>
     <script src="static/charge-list/charge-list.module.js"></script>
     <script src="static/charge-list/charge-list.component.js"></script>
     <script src="static/charge-list/charge-search.component.js"></script>
@@ -15,7 +17,9 @@
     <title>Cluster</title>
 </head>
 <body>
-    <div class="container-fluid">
+
+<navbar></navbar>
+<div class="container-fluid">
         <div class="row">
             <div class="col-md-3">
                 <!--Sidebar content-->
@@ -23,7 +27,7 @@
                 <category-list></category-list>
             </div>
             <div class="col-md-9">
-                <charge-list></charge-list>
+                <charge-list ng-show="false"></charge-list>
             </div>
         </div>
     </div>
