--- a/cluster/public/index.html
+++ b/cluster/public/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="clusterApp">
 <head>
-    <script src="dev/angular.js"></script>
-    <script src="static/account-service/account-service.module.js"></script>
-    <script src="static/navbar/navbar.module.js"></script>
-    <script src="static/navbar/navbar.component.js"></script>
-    <script src="static/charge-list/charge-list.module.js"></script>
-    <script src="static/charge-list/charge-list.component.js"></script>
-    <script src="static/charge-list/charge-search.component.js"></script>
-    <script src="static/category-list/category-list.module.js"></script>
-    <script src="static/category-list/category-list.component.js"></script>
-    <script src="static/app.module.js"></script>
+    <script src="/angular/angular.js"></script>
+    <script src="/angular-route/angular-route.js"></script>
+    <script src="/static/account-service/account-service.module.js"></script>
+    <script src="/static/navbar/navbar.module.js"></script>
+    <script src="/static/navbar/navbar.component.js"></script>
+    <script src="/static/charge-list/charge-list.module.js"></script>
+    <script src="/static/charge-list/charge-list.component.js"></script>
+    <script src="/static/charge-list/charge-search.component.js"></script>
+    <script src="/static/category-list/category-list.module.js"></script>
+    <script src="/static/category-list/category-list.component.js"></script>
+    <script src="/static/app.module.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Latest compiled and minified JavaScript -->
     <meta charset="UTF-8">
@@ -27,7 +28,7 @@
                 <category-list></category-list>
             </div>
             <div class="col-md-9">
-                <charge-list ng-show="false"></charge-list>
+                <ng-view></ng-view>
             </div>
         </div>
     </div>
