--- a/cluster/public/navbar/navbar.template.html
+++ b/cluster/public/navbar/navbar.template.html
@@ -12,9 +12,10 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li ng-class="$ctrl.tabs.trans"><a href="" ng-click="$ctrl.switchTab('trans')">Transactions</a></li>
-                <li ng-class="$ctrl.tabs.summary"><a href="" ng-click="$ctrl.switchTab('summary')">Monthly Summary</a></li>
-                <li class="dropdown">
+                <li><a href="/#/organize">Organize</a></li>
+                <li><a href="/#/review">Review</a></li>
+                <li><a href="/#/plan">Plan</a></li>
+                <!--<li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
@@ -25,7 +26,7 @@
                         <li><a href="#">Separated link</a></li>
                         <li><a href="#">One more separated link</a></li>
                     </ul>
-                </li>
+                </li>-->
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a>V0.1</a></li>
