--- a/cluster/public/navbar/navbar.template.html
+++ b/cluster/public/navbar/navbar.template.html
@@ -30,7 +30,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a>V0.1</a></li>
-                <li><a>Login</a></li>
+                <li><a href="/static/login.html">Login</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
