Process QFX files from mechanics and chase

--- a/cluster/public/upload.html
+++ b/cluster/public/upload.html
@@ -5,7 +5,7 @@
     <title>Cluster</title>
 </head>
 <body>
-  <h1>Sign up</h1>
+  <h1>Upload</h1>
   <form action="/api/1.0/charges/qfx" method="post" enctype="multipart/form-data">
     <input type="file" name="QFX_File"/><br/><br/>
     <input type="submit" value="Go"/>
