--- a/cluster/public/category-list/category-list.template.html
+++ b/cluster/public/category-list/category-list.template.html
@@ -1,26 +1,28 @@
-<button ng-click="$ctrl.accountService.createCategory('New Category',null)" class="btn btn-default">Create Category</button>
-<br>
-<ul class="categories table">
- <li>
-  <b>Name:</b>
- </li>
- <li ng-repeat="category in $ctrl.accountService.categories">
-   <span ng-hide="editing" ng-click="editing = true">{{category.category_name}}</span>
-   <form ng-show="editing" ng-submit="editing = false; $ctrl.accountService.updateCategory(category,null)">
-    <input type="text" ng-model="category.category_name" placeholder="Name" ng-required/>
-    <br/>
-   </form>
-   <button ng-click="$ctrl.accountService.deleteCategory(category.category_name, null)" class="btn btn-default">Delete</button>
-   <ul>
-    <li ng-repeat="regex in category.regex">
-     <span ng-hide="editing_2" ng-click="editing_2 = true">{{regex.regex}}</span>
-     <form ng-show="editing_2" ng-submit="editing_2 = false; $ctrl.accountService.updateRegex(category, regex,null)">
-      <input type="text" ng-model="regex.regex" placeholder="Name" ng-required/>
-      <br/>
-     </form>
-     <button ng-click="$ctrl.accountService.deleteRegex(category, regex, null)" class="btn btn-default">Delete</button>
+<div ng-repeat="category in $ctrl.accountService.categories">
+
+    <ul class="list-group">
+        <li class="list-group-item">
+            <span ng-hide="editing" ng-click="editing = true" style="font-size: 12pt"><b>{{category.category_name}}</b><button ng-click="$ctrl.accountService.deleteCategory(category.category_name, null)" class="btn btn-default btn-xs pull-right"><span class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span></button></span>
+
+            <form ng-show="editing" ng-submit="editing = false; $ctrl.accountService.updateCategory(category,null)">
+                <input type="text" ng-model="category.category_name" placeholder="Name" ng-required/>
+            </form>
+
+        </li>
+        <li class="list-group-item" ng-repeat="regex in category.regex">
+            <span ng-hide="editing_2" ng-click="editing_2 = true">{{regex.regex}}<button ng-click="$ctrl.accountService.deleteRegex(category, regex, null)" class="btn btn-default btn-xs pull-right"><span class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span></button></span>
+            <form ng-show="editing_2" ng-submit="editing_2 = false; $ctrl.accountService.updateRegex(category, regex,null)">
+                <input type="text" maxlength="10" style="width: 100px" ng-model="regex.regex" placeholder="New Regex" ng-required/>
+            </form>
+
+        </li>
+
+    <li class="list-group-item">
+        <div>
+            <input type="text" ng-model="new_regex" placeholder="New Regex" style="width: 100px"/><button ng-click="$ctrl.accountService.createRegex(category,new_regex,null)" class="btn btn-default btn-sm">Create Regex</button>
+        </div>
     </li>
-    <li><input type="text" ng-model="new_regex" placeholder="Name"/><button ng-click="$ctrl.accountService.createRegex(category,new_regex,null)" class="btn btn-default">Create Regex</button></li>
-   </ul>
- </li>
-</ul>
+    </ul>
+</div>
+
+
