--- a/cluster/public/index.html
+++ b/cluster/public/index.html
@@ -16,6 +16,8 @@
     <script src="/static/category-list/category-list.component.js"></script>
     <script src="/static/review-tab/review-tab.module.js"></script>
     <script src="/static/review-tab/review-tab.component.js"></script>
+    <script src="/static/profile-page/profile-page.module.js"></script>
+    <script src="/static/profile-page/profile-page.component.js"></script>
     <script src="/static/app.module.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Latest compiled and minified JavaScript -->
