Download qfx to server through http requests

--- a/cluster/public/bank.html
+++ b/cluster/public/bank.html
@@ -11,5 +11,12 @@
     <input type="text" name="name"/><br/><br/>
     <input type="submit" value="Go"/>
   </form>
+  <br/><br/>
+  <p>Verify</p>
+  <form action="/api/1.0/bankAccounts/verify" method="post">
+    <input type="text" name="code" placeholder="code"/><br/><br/>
+    <input type="text" name="bank_id" placeholder="bank_id"/><br/><br/>
+    <input type="submit" value="Go"/>
+  </form>
 </body>
 </html>
