--- a/cluster/public/bank.html
+++ b/cluster/public/bank.html
@@ -9,14 +9,14 @@
   <a href="/api/1.0/bankAccounts/getAll">Get all</a><br/><br/>
   <form action="/api/1.0/bankAccounts/add" method="post">
     <input type="text" name="name"/><br/><br/>
-    <input type="submit" value="Go"/>
+    <input type="submit" value="Add Bank"/>
   </form>
   <br/><br/>
   <p>Verify</p>
   <form action="/api/1.0/bankAccounts/verify" method="post">
     <input type="text" name="code" placeholder="code"/><br/><br/>
     <input type="text" name="bank_id" placeholder="bank_id"/><br/><br/>
-    <input type="submit" value="Go"/>
+    <input type="submit" value="Send to stdin"/>
   </form>
 </body>
 </html>
