--- a/cluster/public/charge-list/charge-list.template.html
+++ b/cluster/public/charge-list/charge-list.template.html
@@ -1,8 +1,9 @@
 <div class="row">
 
     <div class="col-md-2">
-        <div>
+        <div style="overflow:hidden;">
             <button ng-click="$ctrl.accountService.createCategory('New Category',null)" class="btn btn-default">Create Category <span style="color:green" class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></button>
+            <br>
             <button ng-click="$ctrl.accountService.categorize(null)" class="btn btn-default pull-right">Categorize <span style="color:blue" class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
         </div>
         <br>
