Added tests for transactions and a way to add accounts.

--- a/cluster/public/bank.html
+++ b/cluster/public/bank.html
@@ -8,7 +8,8 @@
   <h1>Bank</h1>
   <a href="/api/1.0/bankAccounts/getAll">Get all</a><br/><br/>
   <form action="/api/1.0/bankAccounts/add" method="post">
-    <input type="text" name="name"/><br/><br/>
+    <input type="text" name="name"/><br/>
+    <input type="text" name="account_number"/><br/><br/>
     <input type="submit" value="Add Bank"/>
   </form>
   <br/><br/>
